# MCP-PROJECTS-101-PC

hello-mcp/: hello_mcp_101.py  hello_mcp_102.py  hello_mcp_103.py  mcp_request_client.py  mcp_request_client_2.py  pyproject.toml
hello-mcp-practice/: .env  mcp_client_1.py  mcp_client_2.py  mcp_client_3.py  mcp_client_4.py  mcp_client_logging.py  mcp_client_progress.py  mcp_client_roots.py  mcp_client_sampling.py  mcp_client_transport.py  mcp_server_1_with_2.py  mcp_server_3_with_4.py  mcp_server_logging.py  mcp_server_progress.py  mcp_server_roots.py  mcp_server_sampling.py  mcp_server_transport.py  openai-agent-dynamic-filter-mcp.py  openai-agent-mcp.py  openai-agent-prompts-mcp.py  openai-agent-static-filter-mcp.py  openai-server-mcp.py  pyproject.toml
mcp-client-server-setup/: .env  example_client.py  mcp_client.py  mcp_server.py  pyproject.toml
